Tweak dependency unpack/install to avoid collisions w/ results dir.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -156,7 +156,7 @@ build_timeout_seconds = build_timeout_hours * 60 * 60
 
 def add_pre_dependency_triggers(project, arch, builder):
     pkg_install_command = \
-        "ls ../deps/*.rpm | egrep -v src.rpm | " + \
+        "ls results/*.rpm | egrep -v src.rpm | " + \
         "xargs sudo rpm -Uvh --force"
     for dep in lsb_dependencies:
         if project in lsb_dependencies[dep]:
@@ -169,15 +169,15 @@ def add_pre_dependency_triggers(project, arch, builder):
 
             # Now add the steps.
             if always_devel:
-                unpack_command="cd .. && tar xzvf ../saved/devel/%s-%s.tar.gz && mv results deps" % (dep, arch)
+                unpack_command="tar xzvf ../../saved/devel/%s-%s.tar.gz" % (dep, arch)
             else:
-                unpack_command=WithProperties("cd .. && tar xzvf ../saved/%%(branch_name:-devel)s/%s-%s.tar.gz && mv results deps" % (dep, arch))
+                unpack_command=WithProperties("tar xzvf ../../saved/%%(branch_name:-devel)s/%s-%s.tar.gz" % (dep, arch))
             builder.addStep(ShellCommand(command=unpack_command, 
                                          name="unpack-dep-%s-%s" % (dep, arch)))
             builder.addStep(ShellCommand(
-                command=pkg_install_command,
+                command=pkg_install_command, workdir="deps",
                 name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock],
-                haltOnFailure=True))
+                workdir="deps", haltOnFailure=True))
             builder.addStep(ShellCommand(
                 command=["rm", "-rf", "../deps"],
                 name="remove-dep-%s-%s" % (dep, arch)))
