--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -173,9 +173,10 @@ def add_pre_dependency_triggers(project, arch, builder):
             else:
                 unpack_command=WithProperties("tar xzvf ../../saved/%%(branch_name:-devel)s/%s-%s.tar.gz" % (dep, arch))
             builder.addStep(ShellCommand(command=unpack_command, 
-                                         name="unpack-dep-%s-%s" % (dep, arch)))
+                                         name="unpack-dep-%s-%s" % (dep, arch),
+                                         workdir="deps"))
             builder.addStep(ShellCommand(
-                command=pkg_install_command, workdir="deps",
+                command=pkg_install_command,
                 name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock],
                 workdir="deps", haltOnFailure=True))
             builder.addStep(ShellCommand(
