Include more information in the project name for staging hooks.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -512,7 +512,7 @@ for arch in lsb_archs:
                                    name="pack-sdk", workdir="build_env"))
     build_sdk.addStep(
         FileUpload(slavesrc="../sdk-results.tar.gz", 
-                   masterdest=WithProperties("lsb-sdk-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
+                   masterdest=WithProperties("lsb-sdk-%%(result_type:-results)s-%s.tar.gz" % arch),
                    workdir="build_env"))
 
     # A note on locks: we grab both dependent and non-dependent locks
@@ -593,7 +593,7 @@ for arch in lsb_archs:
                                name="pack-results", workdir=prj))
         b.addStep(
             FileUpload(slavesrc="../results.tar.gz", 
-                       masterdest=WithProperties("%s-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % (prj, build_arch)),
+                       masterdest=WithProperties("%s-%%(result_type:-results)s-%s.tar.gz" % (prj, build_arch)),
                        name="upload-results", workdir=prj))
         add_post_dependency_triggers(prj, build_arch, b)
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
@@ -659,7 +659,7 @@ for arch in lsb_archs:
                                name="pack-results"))
         b.addStep(
             FileUpload(slavesrc="../results.tar.gz", 
-                       masterdest=WithProperties("%s-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % (prj, build_arch)),
+                       masterdest=WithProperties("%s-%%(result_type:-results)s-%s.tar.gz" % (prj, build_arch)),
                        name="upload-results"))
         add_post_dependency_triggers(prj, build_arch, b)
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
@@ -738,7 +738,7 @@ for arch in lsb_archs:
                                 workdir="appbat", name="pack-results"))
     libbat.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest=WithProperties("libbat-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
+                   masterdest=WithProperties("libbat-%%(result_type:-results)s-%s.tar.gz" % arch),
                    workdir="appbat", name="upload-results"))
     libbat.addStep(
         ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
@@ -825,7 +825,7 @@ for arch in lsb_archs:
                                 workdir="appbat", name="pack-results"))
     appbat.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest=WithProperties("appbat-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
+                   masterdest=WithProperties("appbat-%%(result_type:-results)s-%s.tar.gz" % arch),
                    workdir="appbat", name="upload-results", 
                    flunkOnFailure=False))
     appbat.addStep(ShellCommand(command=["make", "clean"],
@@ -874,7 +874,7 @@ for arch in lsb_archs:
                                 workdir="misc-test", name="pack-results"))
     devchk.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest=WithProperties("devchk-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
+                   masterdest=WithProperties("devchk-%%(result_type:-results)s-%s.tar.gz" % arch),
                    workdir="misc-test", name="upload-results", 
                    flunkOnFailure=False))
     add_post_dependency_triggers("devchk", arch, devchk)
