Add 4.1 forked projects.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -144,7 +144,9 @@ branch_watch_list = { "4.0": [ "appbat", "azov-qt3-tests", "azov-qt4-tests",
                                "olver-core-tests", "perl-test", 
                                "printing-test", "python-test", "runtime-test",
                                "t2c-cpp-tests", "t2c-desktop-tests", 
-                               "t2c-harness", "xml-test", "xts5-test" ] }
+                               "t2c-harness", "xml-test", "xts5-test" ],
+                      "4.1": [ "appbat", "azov-qt3-tests", "desktop-test",
+                               "t2c-alsa-tests" ] }
 
 # Values calculated from configured variables.
 stable_timer_seconds = stable_timer_hours * 60 * 60
