libbat, being special, should always be tied to the branch being built.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -163,11 +163,14 @@ def add_pre_dependency_triggers(project, arch, builder):
     for dep in lsb_dependencies:
         if project in lsb_dependencies[dep]:
             # First, see if we need this from devel always.
-            always_devel = True
-            for branch in branch_watch_list.keys():
-                if dep in branch_watch_list[branch]:
-                    always_devel = False
-                    break
+            if dep == "libbat":
+                always_devel = False
+            else:
+                always_devel = True
+                for branch in branch_watch_list.keys():
+                    if dep in branch_watch_list[branch]:
+                        always_devel = False
+                        break
 
             # Now add the steps.
             if always_devel:
