--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -146,7 +146,7 @@ branch_watch_list = { "4.0": [ "appbat", "azov-qt3-tests", "azov-qt4-tests",
                                "t2c-cpp-tests", "t2c-desktop-tests", 
                                "xml-test", "xts5-test" ],
                       "4.1": [ "appbat", "azov-qt3-tests", "desktop-test",
-                               "t2c-alsa-tests" ] }
+                               "misc-test", "t2c-alsa-tests" ] }
 
 # Values calculated from configured variables.
 stable_timer_seconds = stable_timer_hours * 60 * 60
