Do pkgcache for appbat; use new --delete-bad when checking pkgcache.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -722,8 +722,10 @@ for arch in lsb_archs:
     libbat.addStep(
         lfbuildbot.LSBConfigureAppbat(command=["./configure.libbat"],
                                       workdir="appbat", name="configure"))
-    libbat.addStep(ShellCommand(command="make check || rm -f packages/*.tar*",
-                                workdir="appbat", name="check-pkgcache"))
+    libbat.addStep(ShellCommand(command=["extras/entitycheck.py", "-c",
+                                         "--delete-bad"],
+                                workdir="appbat", name="check-pkgcache",
+                                flunkOnFailure=False, haltOnFailure=False))
     libbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make libbat ENTITYCHECK_QUIET=-q", 
                                   workdir="appbat", name="build-libbat",
@@ -788,9 +790,22 @@ for arch in lsb_archs:
                                 workdir="appbat", name="clear-old-results"))
     appbat.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                 workdir="appbat", name="create-results-dir"))
+    appbat.addStep(ShellCommand(command=["mkdir", "-p", 
+                                         "/tmp/appbat-pkgcache"],
+                                workdir="appbat", name="create-pkgcache"))
+    appbat.addStep(ShellCommand(command="cp /tmp/appbat-pkgcache/* packages",
+                                workdir="appbat", name="copy-pkgcache",
+                                flunkOnFailure=False, haltOnFailure=False))
+    appbat.addStep(ShellCommand(command="rm -f /tmp/appbat-pkgcache/*",
+                                workdir="appbat", name="clear-pkgcache",
+                                flunkOnFailure=False, haltOnFailure=False))
     appbat.addStep(
         lfbuildbot.LSBConfigureAppbat(command=["./configure"],
                                       workdir="appbat", name="configure"))
+    appbat.addStep(ShellCommand(command=["extras/entitycheck.py", "-c",
+                                         "--delete-bad"],
+                                workdir="appbat", name="check-pkgcache",
+                                flunkOnFailure=False, haltOnFailure=False))
     appbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make appbat ENTITYCHECK_QUIET=-q", 
                                   workdir="appbat", name="build-appbat", 
@@ -833,6 +848,10 @@ for arch in lsb_archs:
                    masterdest=WithProperties("appbat-%%(result_type:-results)s-%s.tar.gz" % arch),
                    workdir="appbat", name="upload-results", 
                    flunkOnFailure=False))
+    appbat.addStep(
+        ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
+                     workdir="appbat", name="save-pkgcache",
+                     flunkOnFailure=False, haltOnFailure=False))
     appbat.addStep(ShellCommand(command=["make", "clean"],
                                 workdir="appbat", name="clean",
                                 alwaysRun=True))
