Re-enable the IRC bot.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -929,11 +929,11 @@ c['status'] = []
 c['status'].append(html.WebStatus(http_port=8009, allowForce=True,
                                   auth=HTPasswdAuth(web_htpasswd_path)))
 
-#c['status'].append(words.IRC(host="irc.freenode.net", nick="lsb_bb",
-#                             channels=["#lsb"], allowForce=True,
-#                             notify_events={'exception': 1,
-#                                            'successToFailure': 1,
-#                                            'failureToSuccess': 1}))
+c['status'].append(words.IRC(host="irc.freenode.net", nick="lsb_bb",
+                             channels=["#lsb"], allowForce=True,
+                             notify_events={'exception': 1,
+                                            'successToFailure': 1,
+                                            'failureToSuccess': 1}))
 
 # from buildbot.status import mail
 # c['status'].append(mail.MailNotifier(fromaddr="buildbot@localhost",
