Fix config for the toplevel URL for buildbot.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -984,4 +984,4 @@ c['projectURL'] = "http://www.linuxbase.org/"
 # with an externally-visible host name which the buildbot cannot figure out
 # without some help.
 
-c['buildbotURL'] = "http://dev.linuxfoundation.org/buildbot/lsb/"
+c['buildbotURL'] = "http://www.linuxbase.org/buildbot/"
