Disable polling temporarily in preparation for ChangeSource migration.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -260,6 +260,9 @@ c['slavePortnum'] = 9989
 # about source code changes. Any class which implements IChangeSource can be
 # put here: there are several in buildbot/changes/*.py to choose from.
 
+# XXX: Polling effectively disabled (interval set to one week) due to
+#      load/throttling issues on server; need to switch to PbChangeSource.
+
 c['change_source'] = []
 lsb_change_sources = lsb_pkg_subdir_projects.keys() + \
     [x[1] for x in lsb_packaging_projects if x[1] is not None] + ["appbat"]
@@ -269,12 +272,13 @@ for project in lsb_change_sources:
         continue
     c['change_source'].append(
         BzrPoller(url="%slsb/devel/%s" % (bzr_toplevel, project),
-                  branch_name="lsb/devel/" + project))
+                  branch_name="lsb/devel/" + project, poll_interval=604800))
     for branch in branch_watch_list:
         if project in branch_watch_list[branch]:
             c['change_source'].append(
                 BzrPoller(url="%slsb/%s/%s" % (bzr_toplevel, branch, project),
-                          branch_name="lsb/%s/%s" % (branch, project)))
+                          branch_name="lsb/%s/%s" % (branch, project),
+                          poll_interval=604800))
     added.append(project)
 
 # For example, if you had CVSToys installed on your repository, and your
