Fix PBChangeSource creation issues.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -269,8 +269,8 @@ c['slavePortnum'] = 9989
 changesrc_password_file = open("/opt/buildbot/changesrc_pwds")
 (changesrc_user, changesrc_pw) = \
     changesrc_password_file.readline().strip().split(":", 1)
-c['change_source'] = pb.PBChangeSource(user=changesrc_user,
-                                       password=changesrc_pw)
+c['change_source'] = pb.PBChangeSource(port=9990, user=changesrc_user,
+                                       passwd=changesrc_pw)
 changesrc_password_file.close()
 
 
