Start notifications of build issues to the lsb-messages mailing list.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -911,15 +911,12 @@ c['status'].append(words.IRC(host="irc.freenode.net", nick="lsb_bb",
                                             'successToFailure': 1,
                                             'failureToSuccess': 1}))
 
-# from buildbot.status import mail
-# c['status'].append(mail.MailNotifier(fromaddr="buildbot@localhost",
-#                                      extraRecipients=["builds@example.com"],
-#                                      sendToInterestedUsers=False))
-#
-# from buildbot.status import words
-# c['status'].append(words.IRC(host="irc.example.com", nick="bb",
-#                              channels=["#example"]))
-#
+from buildbot.status import mail
+c['status'].append(mail.MailNotifier(
+    fromaddr="buildbot@linuxbase.org", sendToInterestedUsers=False,
+    extraRecipients=["lsb-messages@lists.linux-foundation.org"],
+    mode='change'))
+
 # from buildbot.status import client
 # c['status'].append(client.PBListener(9988))
 
