Switch to the new email-based change source.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -19,8 +19,6 @@ from buildbot.changes import pb
 
 import lfbuildbot
 
-from bzr_buildbot import BzrPoller
-
 # This buildbot config file defines the LSB builds that are needed.
 # 
 # Each project needs one build per architecture; this includes the
@@ -262,16 +260,27 @@ c['slavePortnum'] = 9989
 # about source code changes. Any class which implements IChangeSource can be
 # put here: there are several in buildbot/changes/*.py to choose from.
 
-# For the LSB builder, we've moved to a push model, so we only need
-# a push receiver.  We store the user/password data outside this version
-# control repository, as with slave passwords above.
+# For the LSB builder, we let bzr push change notifications via email.
+# Thus, the only change source we need is the email parser, as well as a
+# branch map.
 
-changesrc_password_file = open("/opt/buildbot/changesrc_pwds")
-(changesrc_user, changesrc_pw) = \
-    changesrc_password_file.readline().strip().split(":", 1)
-c['change_source'] = pb.PBChangeSource(port=9990, user=changesrc_user,
-                                       passwd=changesrc_pw)
-changesrc_password_file.close()
+branch_map = {}
+lsb_change_sources = lsb_pkg_subdir_projects.keys() + \
+    [x[1] for x in lsb_packaging_projects if x[1] is not None] + ["appbat"]
+added = []
+for project in lsb_change_sources:
+    if project in added:
+        continue
+    devel_path = "lsb/devel/" + project
+    branch_map["/srv/www/bzr/" + devel_path] = devel_path
+    for branch in branch_watch_list:
+        if project in branch_watch_list[branch]:
+            branch_path = "lsb/%s/%s" % (branch, project)
+            branch_map["/srv/www/bzr/" + branch_path] = branch_path
+    added.append(project)
+
+c['change_source'] = lfbuildbot.BzrLsbMaildirSource(
+    "/opt/buildbot/Maildir", branchMap=branch_map)
 
 
 ####### SCHEDULERS
