Fix thinko in expected path for bzr emails.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -272,11 +272,11 @@ for project in lsb_change_sources:
     if project in added:
         continue
     devel_path = "lsb/devel/" + project
-    branch_map["/srv/www/bzr/" + devel_path] = devel_path
+    branch_map["/var/www/bzr/" + devel_path] = devel_path
     for branch in branch_watch_list:
         if project in branch_watch_list[branch]:
             branch_path = "lsb/%s/%s" % (branch, project)
-            branch_map["/srv/www/bzr/" + branch_path] = branch_path
+            branch_map["/var/www/bzr/" + branch_path] = branch_path
     added.append(project)
 
 c['change_source'] = lfbuildbot.BzrLsbMaildirSource(
