Switch version control config to new style.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -449,8 +449,8 @@ for arch in lsb_archs:
     build_sdk = factory.BuildFactory()
     build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
                           defaultBranch="lsb/devel/build_env", 
-                          mode="copy", workdir="build_env",
-                          timeout=bzr_timeout_seconds))
+                          mode="full", method="fresh",
+                          workdir="build_env", timeout=bzr_timeout_seconds))
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", "../packaging"],
                                    name="clear-old-packaging",
                                    workdir="build_env"))
@@ -550,7 +550,8 @@ for arch in lsb_archs:
         add_pre_dependency_triggers(prj, build_arch, b)
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
-                      mode="copy", timeout=bzr_timeout_seconds, workdir=prj))
+                      mode="full", method="fresh",
+                      timeout=bzr_timeout_seconds, workdir=prj))
         for other_repo in lsb_pkg_subdir_projects[prj]:
             if always_pull_from_devel(other_repo):
                 checkout_url = "%slsb/devel/%s" % (bzr_toplevel, other_repo)
@@ -621,8 +622,8 @@ for arch in lsb_archs:
         if repo is not None:
             b.addStep(Bzr(baseURL=bzr_toplevel,
                           defaultBranch="lsb/devel/%s" % repo,
-                          workdir=repo, mode="update",
-                          timeout=bzr_timeout_seconds))
+                          workdir=repo, timeout=bzr_timeout_seconds,
+                          mode="full", method="fresh"))
         b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"],
                                name="clear-old-packaging"))
         b.addStep(ShellCommand(
@@ -680,8 +681,8 @@ for arch in lsb_archs:
     add_pre_dependency_triggers("libbat", arch, libbat)
 
     libbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
-                       workdir="appbat", mode="copy",
-                       timeout=bzr_timeout_seconds))
+                       workdir="appbat", timeout=bzr_timeout_seconds,
+                       mode="full", method="fresh"))
     libbat.addStep(ShellCommand(command=["rm", "-rf", "../tools"],
                                 workdir="appbat", name="clear-old-nalfs"))
     libbat.addStep(ShellCommand(command=["mkdir", "-p", "../tools"],
@@ -760,7 +761,7 @@ for arch in lsb_archs:
     add_pre_dependency_triggers("appbat", arch, appbat)
 
     appbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
-                       workdir="appbat", mode="copy",
+                       workdir="appbat", mode="full", method="fresh",
                        timeout=bzr_timeout_seconds))
     appbat.addStep(ShellCommand(command=["rm", "-rf", "../tools"],
                                 workdir="appbat", name="clear-old-nalfs"))
@@ -862,7 +863,8 @@ for arch in lsb_archs:
 
     devchk.addStep(Bzr(baseURL=bzr_toplevel, 
                        defaultBranch="lsb/devel/misc-test",
-                       workdir="misc-test", mode="copy", 
+                       workdir="misc-test",
+                       mode="full", method="fresh",
                        timeout=bzr_timeout_seconds))
     devchk.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
                                 workdir="misc-test", name="clear-old-results"))
