Fix import for new-style version control.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -9,7 +9,7 @@ from buildbot.process import factory
 from buildbot.steps import trigger
 from buildbot.steps.shell import ShellCommand, Configure, Compile
 from buildbot.steps.master import MasterShellCommand
-from buildbot.steps.source import Bzr
+from buildbot.steps.source.bzr import Bzr
 from buildbot.steps.transfer import FileUpload
 from buildbot.process.properties import WithProperties
 from buildbot.status import html
