--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -449,7 +449,7 @@ for arch in lsb_archs:
     build_sdk = factory.BuildFactory()
     build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
                           defaultBranch="lsb/devel/build_env", 
-                          mode="full", method="fresh",
+                          mode="full", method="clobber",
                           workdir="build_env", timeout=bzr_timeout_seconds))
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", "../packaging"],
                                    name="clear-old-packaging",
@@ -550,7 +550,7 @@ for arch in lsb_archs:
         add_pre_dependency_triggers(prj, build_arch, b)
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
-                      mode="full", method="fresh",
+                      mode="full", method="clobber",
                       timeout=bzr_timeout_seconds, workdir=prj))
         for other_repo in lsb_pkg_subdir_projects[prj]:
             if always_pull_from_devel(other_repo):
@@ -623,7 +623,7 @@ for arch in lsb_archs:
             b.addStep(Bzr(baseURL=bzr_toplevel,
                           defaultBranch="lsb/devel/%s" % repo,
                           workdir=repo, timeout=bzr_timeout_seconds,
-                          mode="full", method="fresh"))
+                          mode="full", method="clobber"))
         b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"],
                                name="clear-old-packaging"))
         b.addStep(ShellCommand(
@@ -682,7 +682,7 @@ for arch in lsb_archs:
 
     libbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
                        workdir="appbat", timeout=bzr_timeout_seconds,
-                       mode="full", method="fresh"))
+                       mode="full", method="clobber"))
     libbat.addStep(ShellCommand(command=["rm", "-rf", "../tools"],
                                 workdir="appbat", name="clear-old-nalfs"))
     libbat.addStep(ShellCommand(command=["mkdir", "-p", "../tools"],
@@ -761,7 +761,7 @@ for arch in lsb_archs:
     add_pre_dependency_triggers("appbat", arch, appbat)
 
     appbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
-                       workdir="appbat", mode="full", method="fresh",
+                       workdir="appbat", mode="full", method="clobber",
                        timeout=bzr_timeout_seconds))
     appbat.addStep(ShellCommand(command=["rm", "-rf", "../tools"],
                                 workdir="appbat", name="clear-old-nalfs"))
@@ -864,7 +864,7 @@ for arch in lsb_archs:
     devchk.addStep(Bzr(baseURL=bzr_toplevel, 
                        defaultBranch="lsb/devel/misc-test",
                        workdir="misc-test",
-                       mode="full", method="fresh",
+                       mode="full", method="clobber",
                        timeout=bzr_timeout_seconds))
     devchk.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
                                 workdir="misc-test", name="clear-old-results"))
