Switch devchk to its own repository (split from misc-test).

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -316,7 +316,6 @@ for prj in arch_prj_list:
 
 jobdir_repos = dict(lsb_packaging_projects)
 jobdir_repos["build-sdk"] = "build_env"
-jobdir_repos["devchk"] = "misc-test"
 
 sch_jobdir = lfbuildbot.MultiScheduler(
     name="sch_jobdir", builderNames=multi_builder_list, 
@@ -339,7 +338,7 @@ for arch in lsb_archs:
             builderNames=["appbat-" + arch], 
             treeStableTimer=slow_stable_timer_seconds)
         sch_devchk = scheduler.Scheduler(name="sch-devchk-" + arch,
-                                         branch="lsb/devel/misc-test",
+                                         branch="lsb/devel/devchk",
                                          builderNames=["devchk-" + arch],
                                          treeStableTimer=stable_timer_seconds)
         sch_sdk = scheduler.Scheduler(name="sch-build-sdk-" + arch,
@@ -862,31 +861,31 @@ for arch in lsb_archs:
     add_pre_dependency_triggers("devchk", arch, devchk)
 
     devchk.addStep(Bzr(baseURL=bzr_toplevel, 
-                       defaultBranch="lsb/devel/misc-test",
-                       workdir="misc-test",
+                       defaultBranch="lsb/devel/devchk",
+                       workdir="devchk",
                        mode="full", method="clobber",
                        timeout=bzr_timeout_seconds))
     devchk.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
-                                workdir="misc-test", name="clear-old-results"))
+                                workdir="devchk", name="clear-old-results"))
     devchk.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
-                                workdir="misc-test", 
+                                workdir="devchk", 
                                 name="create-results-dir"))
     devchk.addStep(ShellCommand(command="cd devchk/ts/devchk && ./dodevchk",
-                                workdir="misc-test", name="build",
+                                workdir="devchk", name="build",
                                 flunkOnFailure=False))
     devchk.addStep(ShellCommand(command="cp devchk/ts/devchk/*.output devchk/ts/devchk/*.sql ../results",
-                                workdir="misc-test", name="collect-results",
+                                workdir="devchk", name="collect-results",
                                 flunkOnFailure=False))
     devchk.addStep(ShellCommand(command="test $(ls ../results | wc -l) -gt 0",
-                                workdir="misc-test", name="check-results",
+                                workdir="devchk", name="check-results",
                                 haltOnFailure=True))
     devchk.addStep(ShellCommand(command=["tar", "czvf", "../results.tar.gz", 
                                          "../results"],
-                                workdir="misc-test", name="pack-results"))
+                                workdir="devchk", name="pack-results"))
     devchk.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
                    masterdest=WithProperties("devchk-%%(result_type:-results)s-%s.tar.gz" % arch),
-                   workdir="misc-test", name="upload-results", 
+                   workdir="devchk", name="upload-results", 
                    flunkOnFailure=False))
     add_post_dependency_triggers("devchk", arch, devchk)
 
