Fix devchk build steps to fit the layout for the new repo.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -870,10 +870,10 @@ for arch in lsb_archs:
     devchk.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                 workdir="devchk", 
                                 name="create-results-dir"))
-    devchk.addStep(ShellCommand(command="cd devchk/ts/devchk && ./dodevchk",
+    devchk.addStep(ShellCommand(command="cd ts/devchk && ./dodevchk",
                                 workdir="devchk", name="build",
                                 flunkOnFailure=False))
-    devchk.addStep(ShellCommand(command="cp devchk/ts/devchk/*.output devchk/ts/devchk/*.sql ../results",
+    devchk.addStep(ShellCommand(command="cp ts/devchk/*.output ts/devchk/*.sql ../results",
                                 workdir="devchk", name="collect-results",
                                 flunkOnFailure=False))
     devchk.addStep(ShellCommand(command="test $(ls ../results | wc -l) -gt 0",
