Throttle concurrent builds to 1 per slave.
We don't need this anymore, because we're not triggering dependency
builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -241,7 +241,7 @@ c['slaves'] = []
 slave_password_file = open("/opt/buildbot/slave_pwds")
 for line in slave_password_file:
     (user, pw) = line.strip().split(":", 1)
-    c['slaves'].append(BuildSlave(user, pw))
+    c['slaves'].append(BuildSlave(user, pw, max_builds=1))
 slave_password_file.close()
 
 # to limit to two concurrent builds on a slave, use
