Introduce "obsolete branches", and set azov-qt3-tests to be one.
"Obsolete" branches are branches for software that's no longer being
developed, but could receive stable updates.  Our first obsolete project
is now obsolete because of the removal of Qt 3 for LSB 5.0.

Also, remove azov-qt3-tests from the weekly rebuild.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -122,9 +122,10 @@ lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests",
                      "lsbappchk": ["appbat"],
                      "lsbpkgchk": ["appbat"]}
 
-# Job locking.  We don't limit the number of concurrent jobs per
-# slave in the slave config; instead, we only allow one build at a time
-# for builds not triggered via dependencies.
+# Job locking.  This was used when we actually built dependencies
+# for dependent builds; now that we cache old results for dependencies,
+# we also limit builds to one at a time per slave.  So...
+# XXX: don't need these anymore.
 nondep_job_lock = locks.SlaveLock("nondep_builds", maxCount = 1)
 dep_job_lock = locks.SlaveLock("dep_builds", maxCount = 1)
 
@@ -146,6 +147,10 @@ branch_watch_list = { "4.0": [ "appbat", "azov-qt3-tests", "azov-qt4-tests",
                                "xml-test", "xts5-test" ],
                       "4.1": [ "appbat", "azov-qt3-tests", "desktop-test",
                                "misc-test", "t2c-alsa-tests" ] }
+
+# Obsolete branches, which should be watched for old versions
+# but not built from devel.
+obsolete_branches = [ "azov-qt3-tests" ]
 
 # Values calculated from configured variables.
 stable_timer_seconds = stable_timer_hours * 60 * 60
@@ -271,8 +276,9 @@ added = []
 for project in lsb_change_sources:
     if project in added:
         continue
-    devel_path = "lsb/devel/" + project
-    branch_map["/var/www/bzr/" + devel_path] = devel_path
+    if project not in obsolete_branches:
+        devel_path = "lsb/devel/" + project
+        branch_map["/var/www/bzr/" + devel_path] = devel_path
     for branch in branch_watch_list:
         if project in branch_watch_list[branch]:
             branch_path = "lsb/%s/%s" % (branch, project)
@@ -359,11 +365,12 @@ for prj in lsb_pkg_subdir_projects:
         prj_name = "%s-%s" % (prj, arch)
 
         if arch not in low_resource_archs:
-            sch = scheduler.Scheduler(name="sch-" + prj_name,
-                                      branch=os.path.join("lsb/devel", prj),
-                                      builderNames=[prj_name],
-                                      treeStableTimer=stable_timer_seconds)
-            c['schedulers'].append(sch)
+            if prj not in obsolete_branches:
+                sch = scheduler.Scheduler(name="sch-" + prj_name,
+                                          branch=os.path.join("lsb/devel", prj),
+                                          builderNames=[prj_name],
+                                          treeStableTimer=stable_timer_seconds)
+                c['schedulers'].append(sch)
 
             for branch in branch_watch_list:
                 if prj in branch_watch_list[branch]:
