turn on dynchk building, hopefully (bug 3612)

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -99,6 +99,7 @@ lsb_pkg_subdir_projects = { "app-checker": [],
 lsb_packaging_projects = [("lsbappchk", "misc-test"),
                           ("lsbarchk", "misc-test"),
                           ("lsbcmdchk", "misc-test"),
+                          ("lsbdynchk", "misc-test"),
                           ("lsbdev-runner", "build_env"),
                           ("lsblibchk", "misc-test"),
                           ("lsbpkgchk", "misc-test"),
