Set BZR_ROOT as well as BZRTREES for packaging builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -638,7 +638,8 @@ for arch in lsb_archs:
                                name="make-results-dir"))
         b.addStep(
             lfbuildbot.LSBBuildFromPackaging(subdir=prj,
-                                             env={"BZRTREES": ".."},
+                                             env={"BZRTREES": "..",
+                                                  "BZR_ROOT": ".."},
                                              name="build", haltOnFailure=True,
                                              timeout=build_timeout_seconds))
         b.addStep(ShellCommand(
