Rework libbat-dependent builds to work with new versioned libbat.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -160,19 +160,27 @@ def add_pre_dependency_triggers(project, arch, builder):
     pkg_install_command = \
         "ls results/*.rpm | egrep -v src.rpm | " + \
         "xargs sudo rpm -Uvh --force"
+    remove_old_libbat_command = \
+        "rpm -qa --queryformat '%{NAME}\\n' | grep libbat | " + \
+        "xargs sudo rpm -e"
     for dep in lsb_dependencies:
         if project in lsb_dependencies[dep]:
             # First, see if we need this from devel always.
-            if dep == "libbat":
-                always_devel = False
-            else:
-                always_devel = True
-                for branch in branch_watch_list.keys():
-                    if dep in branch_watch_list[branch]:
-                        always_devel = False
-                        break
+            always_devel = True
+            for branch in branch_watch_list.keys():
+                if dep in branch_watch_list[branch]:
+                    always_devel = False
+                    break
 
-            # Now add the steps.
+            # Now add the steps.  First: if this is libbat, add a step to
+            # remove all libbat-like packages.
+            if dep == "libbat":
+                builder.addStep(ShellCommand(command=remove_old_libbat_command,
+                                             name="remove-old-libbat",
+                                             flunkOnFailure=False,
+                                             haltOnFailure=False,
+                                             workdir="deps"))
+
             if always_devel:
                 unpack_command="tar xzvf ../../saved/devel/%s-%s.tar.gz" % (dep, arch)
             else:
