Always clean up dependency pkgs, even if installing them fails.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -194,7 +194,7 @@ def add_pre_dependency_triggers(project, arch, builder):
                 workdir="deps", haltOnFailure=True))
             builder.addStep(ShellCommand(
                 command=["rm", "-rf", "../deps"],
-                name="remove-dep-%s-%s" % (dep, arch)))
+                name="remove-dep-%s-%s" % (dep, arch), alwaysRun=True))
 
 def add_post_dependency_triggers(project, arch, builder):
     if project in lsb_dependencies:
