Special-case libbat when calculating deps; it's not version-independent.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -172,14 +172,15 @@ def add_pre_dependency_triggers(project, arch, builder):
                     always_devel = False
                     break
 
-            # Now add the steps.  First: if this is libbat, add a step to
-            # remove all libbat-like packages.
+            # If this is libbat, add a step to remove all libbat-like
+            # packages and force not-devel.
             if dep == "libbat":
                 builder.addStep(ShellCommand(command=remove_old_libbat_command,
                                              name="remove-old-libbat",
                                              flunkOnFailure=False,
                                              haltOnFailure=False,
                                              workdir="deps"))
+                always_devel = False
 
             if always_devel:
                 unpack_command="tar xzvf ../../saved/devel/%s-%s.tar.gz" % (dep, arch)
